--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -28,3 +28,13 @@ spring:
 #      ddl-auto: create
 server:
   port: 8083
+eureka:
+  instance:
+    prefer-ip-address: true
+    hostname: localhost
+    ip-address: 127.0.0.1
+  client:
+    service-url:
+      defaultZone: http://localhost:8089/eureka/
+    register-with-eureka: true
+    fetch-registry: true
